# upstream-delineator

./: .gitignore  LICENSE.txt  README.md  Upstream Tech Hours.txt  config.py  config2.py  consolidate.py  delineate2.py  graph_ploth.py  outlets.csv  outlets1.csv  outlets_sample.csv  plot_areas.py  pyproject.toml  requirements.txt  step1.py  step2.py  step3.py  step4.py  step5.py  subbasins.py  subbasins_config.py  test-outlets.csv  test_overlay.py  update_network_data.py
data_processing/: area_stats.csv  calc_unitarea_stats.py  db_add_outlet_field.py  db_cleanup.py  db_cleanup2.py  db_cleanup3.py  db_make_outlets.py  make_nodes_edges1.py  make_nodes_edges2.py  make_nodes_edges3.py  make_nodes_edges4.py  make_nodes_edges5.py  make_nodes_edges6.py  make_nodes_edges7.py  simplify_catchments_mapshaper.py  update_db_geoms.py
gis/: Iceland Demo.qgz  Iceland Demo2.qgz  West Coast.qgz
learning/: node_merge_test.py  plot_areas.py  plot_network.py  step1.py  test_args.py  update_network_data.py
learning/old/: step2_abandoned.py  step4_abandoned.py  step4_old.py  step5_abandoned.py  step6_abandoned.py  test_network_prune.py  test_network_prune2.py
old/: step3_abandoned.py  step7_abandoned.py
py/: benchmark_dissolve.py  consolidate.py  db.py  fast_dissolve.py  graph_tools.py  mapper.py  merit_detailed.py  plot_network.py  postgis.py  raster_plots.py  test.py  util.py
test_inputs/: outlets1.csv  outlets2.csv  outlets3.csv  outlets4.csv
upstream_delineator/: config.py  subbasins.py
upstream_delineator/py/: util.py  (+5 more)
util/: beep.py  graph_tools.py  set_stream_order.py
(+9 files in other folders)
