[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
    "geopandas>=0.12",
    "graphviz==0.20.3",
    "matplotlib==3.*",
    "networkx>=2,<4",
    "numpy==1.*",
    "pandas>=1.3",
    "pillow==10.*",
    "pyproj==3.*",
    "pysheds>=0.3",
    "scipy==1.*",
    "shapely>1",
    "topojson~=1.9",
]
name = "upstream_delineator"
version = "0.1.1"
description = "Delineate basins"
